# axon

./: Cargo.toml  README.md
docs/: astro.config.mjs
docs/src/content/docs/: getting-started.mdx  index.mdx  naming-convention.mdx
docs/src/content/docs/commands/: daily.mdx  health.mdx  parse.mdx  refactor.mdx  stats.mdx  tui.mdx  validate.mdx
docs/src/content/docs/guides/: ci-integration.mdx  daily-notes.mdx  refactoring.mdx
docs/src/content/docs/reference/: config.mdx  exit-codes.mdx  patterns.mdx
src/: config.rs  error.rs  fs_utils.rs  global_config.rs  lib.rs  main.rs  notes.rs  pattern.rs  prompts.rs  refactor.rs  tui.rs
src/commands/: health.rs  list.rs  mod.rs  parse.rs  refactor.rs  stats.rs  validate.rs
tests/: integration_tests.rs  notes_tests.rs  pattern_tests.rs  refactor_tests.rs
