[package]
name = "axon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
dialoguer = "0.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
crossterm = "0.28"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
